WIP
-----------------------------
* General
  - [New]Add "Grid move" option under overlay menu and tray menu (by Bernat),
    which enables grid-snap effect while moving widget
    for easy alignment and repositioning.
    "Grid move size" option is accessible from compatibility config dialog.

* [New]Heading Widget
  - Add Heading Widget that similar to flight instrument "heading indicator",
    which shows vehicle yaw angle & direction of travel lines on compass bearings.
  - Add new "icon_compass.png" compass bearings background in "images" folder.
  - Add many customizable options for Heading Widget.

* Vehicles Module
  - Add "lap_difference_ahead_threshold" & "lap_difference_behind_threshold" options,
    which sets lap difference (percentage) threshold
    for tagging opppents as ahead or behind.
    Default value is `0.9` lap.
    Those options are used by lap difference color indicator
    in Trackmap, Relative, Rader Widgets.

2.3.1 (2023-11-12) Hotfix
-----------------------------
* Trailing Widget
  - Fixed FFB plot not displaying full range (absolute value).
  - Fixed small desync issue between different pedal or FFB plots.

* General
  - Removed string format on "id" key word.
  - Fixed fuel data loading error in fuel module.

2.3.0 (2023-11-11)
-----------------------------
* General
  - Fixed error in loading a different preset
    while previous preset is in saving process.
  - Change option name "rF2_process_id" to "process_id".
  - Rename unit option "elevation_unit" to "distance_unit",
    and currently is used by elevation & yellow flag distance display.
  - Fixed text string decode setting.

* [New]Trailing Widget (designed by DanRZ)
  - Show pedal trail history plot display,
    includes throttle, brake, clutch, force feedback.
  - Customizable size, scale, style, orientation, reference lines, etc.

* Relative Module
  - Fixed index out of range when returning
    to monitor while in spectate mode.

* Shared memory API